# ChangeLog for net-misc/modemmanager
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.8 2010/01/25 06:43:44 nirbheek Exp $

  25 Jan 2010; Nirbheek Chauhan <nirbheek@gentoo.org> metadata.xml:
  metadata.xml: add myself, fix indentation

*modemmanager-0.3 (25 Jan 2010)

  25 Jan 2010; Nirbheek Chauhan <nirbheek@gentoo.org>
  +modemmanager-0.3.ebuild:
  Bump to 0.3, needed for networkmanager-0.8

*modemmanager-0.2_p20091123 (23 Nov 2009)

  23 Nov 2009; Robert Piasek <dagger@gentoo.org>
  -modemmanager-0.2_p20090925.ebuild, +modemmanager-0.2_p20091123.ebuild:
  New snapshot of modemmanager. Contains fixes for PPC. Special thanks to
  papillon81 for helping to hunt this the problem down.

*modemmanager-0.2_p20091109 (09 Nov 2009)

  09 Nov 2009; Robert Piasek <dagger@gentoo.org>
  -modemmanager-0.2_p20090824.ebuild, +modemmanager-0.2_p20091109.ebuild:
  Version bump for development version of ModemManager

  28 Sep 2009; Robert Piasek <dagger@gentoo.org>
  modemmanager-0.2_p20090925.ebuild:
  Disable -Werrors

*modemmanager-0.2_p20090925 (25 Sep 2009)

  25 Sep 2009; Robert Piasek <dagger@gentoo.org>
  +modemmanager-0.2_p20090925.ebuild:
  new snapshot

  22 Sep 2009; Robert Piasek <dagger@gentoo.org>
  modemmanager-0.2_p20090824.ebuild:
  Added ARM keyword

*modemmanager-0.2_p20090806 (13 Aug 2009)

  13 Aug 2009; Robert Piasek <dagger@gentoo.org>
  +modemmanager-0.2_p20090806.ebuild, +metadata.xml:
  Initial ebuild of modemmanager
