@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST mobile-broadband-provider-info-20090602.tar.bz2 59018 RMD160 b55e42de07ce9f20103e5fda63a8ac4434ee2076 SHA1 eae262e37cd95a029e33cb9f312c1c0b829cc358 SHA256 e2065e338d4057786c6697d9a0d745ba60d12fbe8f4fc13a418616890113310a
 DIST mobile-broadband-provider-info-20100122.tar.bz2 63811 RMD160 96d82f86415ef6b483c9afe8c0b8dc0e74ccfc35 SHA1 b16b2e635c25bbd2ed150d9328a5e1521dbfa7ca SHA256 4aed0c48306b10ab5a5758c5e547fc9bee2c9857f854b442cb6dc49874f3d620
 EBUILD mobile-broadband-provider-info-20090602.ebuild 633 RMD160 3c91ae7c79a8579cf7d6b48237b82362e977702a SHA1 804a8a6306174aa8a54829158e4f3ea33bbef9b4 SHA256 b6d146dba467aeeae156c28a87cea7aec4a7db2c8da8b76028f29f5789d0b8a7
-EBUILD mobile-broadband-provider-info-20100122.ebuild 727 RMD160 a4067300592e3b689a20bf8443feff7f5c8d5ba3 SHA1 31a034b04dfc7258c3e831048b71db4d8ab86c75 SHA256 3242b28dd2084b49ae33a6d81320d3a613e726a6c68e92f3ef0cf425b70f5532
-MISC ChangeLog 667 RMD160 bb34b283eb7f3e02678c9d4eb3fbb2ef8674bb88 SHA1 e2951b912f68622b322b3f8067c92922b171c7ca SHA256 5a006aedf8a26054fbc2b7b59a20e0aa076d96e97a91fce14913f22f5fb9c223
+EBUILD mobile-broadband-provider-info-20100122.ebuild 730 RMD160 ee96a9d481740738a353490f00509705d8ae6061 SHA1 c2f344686b262b220ce8331ee3d29aeef9c4c42d SHA256 e854ff4226f5e9097e4303530c92bed23e936b1e164326403725e2308434ad2d
+MISC ChangeLog 779 RMD160 45f35935b16998da2a302fbbd31b6cacaf1bafb7 SHA1 f7f009e169f0f726263f1e9de90a573b25c3c15a SHA256 16aad529af7d65f9e1d6a94008e4a01a5086cf5887e737f31dbbc2625693c038
 MISC metadata.xml 352 RMD160 9f952eb61b72059009703562b751c2523db8d769 SHA1 3e56456d5906a68f5f14fd0d97c22ef43f4f6a2e SHA256 1a8953fc88dcb46dd2a6a566027f69e792f03d7f86581546d8069cbe1768e53a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkuXX7AACgkQcsIHjyDViGR8oACg3yHZs5G+93T7PaF+4XtgMF9e
+nUkAn0MNmbGmJuiIZ2PgisZdvPlJimwA
+=skox
+-----END PGP SIGNATURE-----
