@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/networkmanager
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager/ChangeLog,v 1.69 2010/02/26 10:23:29 dagger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager/ChangeLog,v 1.70 2010/03/10 08:59:02 josejx Exp $
+
+  10 Mar 2010; Joseph Jezak <josejx@gentoo.org> networkmanager-0.8.ebuild:
+  Marked ~ppc/~ppc64 for bug #296548.
 
 *networkmanager-0.8 (26 Feb 2010)
 
