@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/modemmanager
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.8 2010/01/25 06:43:44 nirbheek Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.9 2010/03/10 08:58:25 josejx Exp $
+
+  10 Mar 2010; Joseph Jezak <josejx@gentoo.org> modemmanager-0.3.ebuild:
+  Marked ~ppc/~ppc64 for bug #296548.
 
   25 Jan 2010; Nirbheek Chauhan <nirbheek@gentoo.org> metadata.xml:
   metadata.xml: add myself, fix indentation
